# kopi

./: .gitignore  .kopi-version  .mcp.json  .remarkignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  rust-toolchain.toml  test_version_parse.rs  tsconfig.json
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: finish.md  it.md  md.md  review.md  win.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  update-metadata.yml.example  winget.yml
benches/: cache_operations.rs  env_command.rs  kopi_bench.rs  metadata_performance.rs  multi_progress_benchmark.rs  path_resolution.rs  progress_indicator_bench.rs  search_performance.rs  shim_bench.rs  version_parsing.rs  which_bench.rs
benchmarks/: README.md
benchmarks/baselines/: main.json
benchmarks/jdk-downloads/: README.md
docs/: architecture.md  development.md  error_handling.md  parallel-development.md  performance.md  reference.md  shell-integration.md  tdl.md  traceability.md  troubleshooting.md  user-agent-consistency.md
docs/adr/: 001-kopi-command-structure.md  002-serialization-format-for-metadata-storage.md  004-error-handling-strategy.md  005-web-api-mocking-strategy.md  006-progress-indicator-strategy.md  008-platform-compatibility-strategy.md  009-logging-strategy.md  010-api-version-fallback-strategy.md  011-jre-support-strategy.md  012-build-and-test-performance-optimization.md  013-binary-switching-approaches.md  014-configuration-and-version-file-formats.md  016-flexible-version-format.md  016-version-switching-command-design.md  017-jdk-release-metadata-sources.md  018-macos-jdk-bundle-structure-handling.md  ADR-0001-concurrent-process-locking-strategy.md  ADR-8mnaz-concurrent-process-locking-strategy.md  MIGRATION.md  commands.md  metadata-storage-comparison.md
docs/analysis/: AN-0001-concurrent-process-locking.md  AN-i9cma-libc-to-nix-migration.md  AN-l19pi-fs2-dependency-retirement.md  AN-m9efc-concurrent-process-locking.md  AN-uqva7-path-registry-consolidation.md  AN-wn8p3-path-registry-consolidation.md
docs/requirements/: FR-0001-installation-locking.md  FR-0002-uninstallation-locking.md  FR-0003-cache-locking.md  FR-0004-lock-timeout-recovery.md  FR-0005-lock-contention-feedback.md  FR-02uqo-installation-locking.md  FR-c04js-lock-contention-feedback.md  FR-gbsz6-lock-timeout-recovery.md  FR-hq1ns-canonical-path-registry.md  FR-rxelv-file-in-use-detection.md  FR-ui8x2-uninstallation-locking.md  FR-v7ql4-cache-locking.md  FR-x63pa-disk-space-telemetry.md  NFR-0001-lock-timeout-performance.md  NFR-0002-lock-cleanup-reliability.md  NFR-0003-cross-platform-compatibility.md  NFR-4sxdr-path-layout-compatibility.md  NFR-g12ex-cross-platform-compatibility.md  NFR-vcxp8-lock-cleanup-reliability.md  NFR-z6kan-lock-timeout-performance.md
docs/reviews/: 2025-06-26-cache-implementation-review.md  2025-07-05-platform-dependencies.md  2025-07-06-shim-binary-size.md  2025-07-11-corretto-version-format.md  2025-07-15-uninstall-module-review.md  2025-07-23-shim-dependency-analysis.md  2025-07-30-cache-vs-metadata-analysis.md  2025-07-30-kopi-shim-binary-size-analysis.md  2025-08-24-progress-indicator-locations.md
docs/templates/: README.md  adr-lite.md  adr.md  analysis.md  design.md  plan.md  requirements.md  task.md
pkg/nfpm/: nfpm.yml
pkg/wix/: .gitignore  Bundle.wxs  Convert-ToRtf.ps1  Kopi.wixproj  Product.wxs  README.md  WixUI_en-us.wxl  build-bundle.ps1  build.ps1  download-vcredist.ps1  kopi-bundle.wixproj  run-sandbox-test.ps1  test-installer.ps1
scripts/: check-performance.sh  create-baseline.sh  extract-benchmark-summary.sh  generate-metadata.sh  measure-jdk-download.sh  save-benchmark.sh  tdl-new-id.py  tdl-new-id.test.ts  tdl-new-id.ts  trace-status.py  trace-status.test.ts  trace-status.ts
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  platform.rs  user_agent.rs
src/api/: client.rs  mod.rs  models.rs  query.rs  tests.rs
src/archive/: mod.rs
src/cache/: conversion.rs  metadata_cache.rs  mod.rs  models.rs  searcher.rs  storage.rs  tests.rs
src/commands/: cache.rs  current.rs  doctor.rs  env.rs  global.rs  install.rs  list.rs  local.rs  mod.rs  setup.rs  shell.rs  shim.rs  uninstall.rs  which.rs
src/doctor/: formatters.rs  mod.rs
src/download/: checksum.rs  client.rs  http_file_downloader.rs  http_file_downloader_tests.rs  mod.rs  options.rs  progress.rs
src/error/: context.rs  exit_codes.rs  format.rs  mod.rs  shim.rs  tests.rs
src/indicator/: factory.rs  indicatif.rs  mod.rs  silent.rs  simple.rs  status.rs  types.rs
src/installation/: auto.rs  mod.rs
src/locking/: acquisition.rs  cache_writer.rs  cancellation.rs  controller.rs  fallback.rs  handle.rs  hygiene.rs  installation.rs  mod.rs  package_coordinate.rs  scope.rs  scoped_guard.rs  timeout.rs  wait_observer.rs
src/metadata/: foojay.rs  generator.rs  generator_config.rs  http.rs  http_tests.rs  index.rs  local.rs  mod.rs  provider.rs  provider_tests.rs  resolver.rs  source.rs
src/models/: api.rs  distribution.rs  jdk.rs  metadata.rs  mod.rs  package.rs  parser.rs  platform.rs
tests/: api_integration.rs  auto_install.rs  cache_distribution_fetch.rs  cache_filtering.rs  cache_integration.rs  cache_locking.rs  cache_performance.rs  cache_search_display.rs  cache_search_integration.rs  cache_search_queries.rs  cli_global_flag_test.rs  current_command.rs  doctor.rs  doctor_installation_checks.rs  doctor_jdk_checks.rs  doctor_network_cache_checks.rs  doctor_shell_checks.rs  download_integration.rs  env_command.rs  env_shell_execution.rs  example_migration.rs  example_test_home.rs  flexible_version_matching_integration.rs  global_command.rs  http_metadata_integration.rs  indicatif_println_test.rs  install_command_integration.rs  install_e2e.rs  install_locking.rs  install_scenarios.rs  jdk_bundle_e2e_simulation.rs  jdk_bundle_structure_integration.rs  jdk_distributions_integration.rs  local_command.rs  locking_backoff_stress.rs  locking_lifecycle.rs  locking_platform_integration.rs  locking_unix_smoke.rs  locking_windows_smoke.rs  metadata_e2e.rs  (+28 more)
(+290 files in other folders)
