[package]
name = "kopi"
version = "0.1.0"
edition = "2024"
authors = ["taichi"]
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
attohttpc = {version = "0.29.2", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
cfg-if = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["color", "derive", "wrap_help"] }
color-eyre = "0.6.5"
comfy-table = "7.1"
dirs = "6.0.0"
dunce = "1.0.5"
env_logger = "0.11"
flate2 = "1.0"
envoy = "0.1.3"
fs2 = "0.4.3"
headers = "0.4.1"
httpdate = "1.0.3"
indexmap = "2.9.0"
indicatif = "0.17.11"
log = "0.4.27"
once_cell = "1.21.3"
os_info = "3.12.0"
readext = "0.1.0"
regex = "1.11.1"
retry = "2.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.5.0"
which = "8.0.0"
zip = "4.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.53.0"
junction = "1.2.0"
winapi = { version = "0.3", features = ["fileapi"] }

[features]
integration_tests = []

[dev-dependencies]
mockall = "0.12"
mockito = "1.4"
