[package]
name = "kopi"
version = "0.1.0"
edition = "2024"
authors = ["taichi"]
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1

# Add fast release profile for development
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

# Optimized profile for minimal shim binary size
[profile.release-shim]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
panic = "abort"  # Smaller binary without unwinding
strip = true  # Strip symbols

# Optimize test builds
[profile.test]
opt-level = 1  # Basic optimization
debug = 1      # Limited debug info

# Optimize dev builds with dependencies
[profile.dev.package."*"]
opt-level = 2

[dependencies]
attohttpc = {version = "0.29.2", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
cfg-if = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["color", "derive", "wrap_help"] }
colored = "3.0.0"
comfy-table = "7.1"
dirs = "6.0.0"
dunce = "1.0.5"
env_logger = "0.11"
flate2 = "1.0"
envoy = "0.1.3"
fs2 = "0.4.3"
headers = "0.4.1"
httpdate = "1.0.3"
indexmap = "2.9.0"
indicatif = "0.17.11"
log = "0.4.27"
once_cell = "1.21.3"
os_info = "3.12.0"
readext = "0.1.0"
regex = "1.11.1"
retry = "2.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
digest = "0.10"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.5.0"
which = "8.0.0"
zip = "4.2.0"
config = { version = "0.15.11", default-features = false, features = ["convert-case", "convert_case", "toml"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.53.0"
junction = "1.2.0"
winapi = { version = "0.3", features = ["fileapi"] }

[features]
integration_tests = []
perf-tests = []

[dev-dependencies]
mockall = "0.12"
mockito = "1.4"
criterion = "0.5"
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.8"
serial_test = "3.2.0"

[[bench]]
name = "kopi_bench"
harness = false

[[bin]]
name = "kopi-shim"
path = "src/bin/kopi-shim.rs"

[lints.rust]
unused_variables = "deny"

[lints.clippy]
uninlined_format_args = "deny"
needless_borrow = "deny"
bool_assert_comparison = "deny"
