[package]
name = "kopi"
version = "0.0.4"
edition = "2024"
authors = ["taichi"]
license = "Apache-2.0"
repository = "https://github.com/kopi-vm/kopi"
description = "Kopi is a JDK version management tool"
readme = "README.md"
keywords = ["java", "jdk", "version", "management", "tool"]
default-run = "kopi"

[profile.release]
lto = "fat"
codegen-units = 1

# Add fast release profile for development
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

# Optimized profile for minimal shim binary size
[profile.release-shim]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
panic = "abort"  # Smaller binary without unwinding
strip = true  # Strip symbols

# Optimize test builds
[profile.test]
opt-level = 1  # Basic optimization
debug = 1      # Limited debug info

# Optimize dev builds with dependencies
[profile.dev.package."*"]
opt-level = 2

[dependencies]
attohttpc = {version = "0.29.2", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["color", "derive", "wrap_help"] }
colored = "3.0.0"
comfy-table = "7.1"
dirs = "6.0.0"
env_logger = "0.11"
flate2 = "1.0"
fs2 = "0.4.3"
indicatif = "0.17.11"
log = "0.4.27"
retry = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.31"
digest = "0.10"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.5.0"
which = "8.0.0"
zip = "4.2.0"
config = { version = "0.15.11", default-features = false, features = ["convert-case", "convert_case", "toml"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "securitybaseapi", "accctrl", "processthreadsapi", "handleapi", "winbase"] }

[features]
integration_tests = []
perf_tests = []

[dev-dependencies]
mockall = "0.12"
mockito = "1.4"
criterion = "0.5"
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.8"
serial_test = "3.2.0"
regex = "1.11"

[[bench]]
name = "kopi_bench"
harness = false

[[bench]]
name = "env_command"
harness = false

[[bench]]
name = "metadata_performance"
harness = false

[[bin]]
name = "kopi-shim"
path = "src/bin/kopi-shim.rs"

[[bin]]
name = "kopi-metadata-gen"
path = "src/bin/kopi-metadata-gen.rs"

[lints.rust]
unused_variables = "deny"

[lints.clippy]
uninlined_format_args = "deny"
needless_borrow = "deny"
bool_assert_comparison = "deny"
